v0.11.1/_sources/generated/statsmodels.discrete.discrete_model.MultinomialResults.rst.txt
statsmodels.discrete.discrete\_model.MultinomialResults
=======================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: MultinomialResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~MultinomialResults.conf_int
      ~MultinomialResults.cov_params
      ~MultinomialResults.f_test
      ~MultinomialResults.get_margeff
      ~MultinomialResults.initialize
      ~MultinomialResults.load
      ~MultinomialResults.margeff
      ~MultinomialResults.normalized_cov_params
      ~MultinomialResults.pred_table
      ~MultinomialResults.predict
      ~MultinomialResults.remove_data
      ~MultinomialResults.save
      ~MultinomialResults.set_null_options
      ~MultinomialResults.summary
      ~MultinomialResults.summary2
      ~MultinomialResults.t_test
      ~MultinomialResults.t_test_pairwise
      ~MultinomialResults.wald_test
      ~MultinomialResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~MultinomialResults.aic
      ~MultinomialResults.bic
      ~MultinomialResults.bse
      ~MultinomialResults.fittedvalues
      ~MultinomialResults.llf
      ~MultinomialResults.llnull
      ~MultinomialResults.llr
      ~MultinomialResults.llr_pvalue
      ~MultinomialResults.prsquared
      ~MultinomialResults.pvalues
      ~MultinomialResults.resid_misclassified
      ~MultinomialResults.resid_response
      ~MultinomialResults.tvalues
      ~MultinomialResults.use_t
   
   
   