v0.14.3/_sources/generated/statsmodels.discrete.discrete_model.MultinomialResults.rst.txt
statsmodels.discrete.discrete\_model.MultinomialResults
=======================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: MultinomialResults
   :exclude-members: conf_int,cov_params,f_test,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,margeff,normalized_cov_params,pred_table,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~MultinomialResults.conf_int
      ~MultinomialResults.cov_params
      ~MultinomialResults.f_test
      ~MultinomialResults.get_distribution
      ~MultinomialResults.get_influence
      ~MultinomialResults.get_margeff
      ~MultinomialResults.get_prediction
      ~MultinomialResults.info_criteria
      ~MultinomialResults.initialize
      ~MultinomialResults.load
      ~MultinomialResults.margeff
      ~MultinomialResults.normalized_cov_params
      ~MultinomialResults.pred_table
      ~MultinomialResults.predict
      ~MultinomialResults.remove_data
      ~MultinomialResults.save
      ~MultinomialResults.score_test
      ~MultinomialResults.set_null_options
      ~MultinomialResults.summary
      ~MultinomialResults.summary2
      ~MultinomialResults.t_test
      ~MultinomialResults.t_test_pairwise
      ~MultinomialResults.wald_test
      ~MultinomialResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~MultinomialResults.aic
      ~MultinomialResults.bic
      ~MultinomialResults.bse
      ~MultinomialResults.fittedvalues
      ~MultinomialResults.im_ratio
      ~MultinomialResults.llf
      ~MultinomialResults.llnull
      ~MultinomialResults.llr
      ~MultinomialResults.llr_pvalue
      ~MultinomialResults.prsquared
      ~MultinomialResults.pvalues
      ~MultinomialResults.resid_misclassified
      ~MultinomialResults.resid_pearson
      ~MultinomialResults.resid_response
      ~MultinomialResults.tvalues
      ~MultinomialResults.use_t
   
   
   